percentage update synchronously

--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -23,18 +23,18 @@
                 <tr class="row">
                     <td>Activity 1</td>
                     <td>A1</td>
-                    <td><input type="number" class="grades weight"> </td>
-                    <td><input type="number" class="grades score"> /
-                        <input type="number" class="grades total">
+                    <td><input type="number" class="grades weight" value = 4> </td>
+                    <td><input type="number" class="grades score" value = 5> /
+                        <input type="number" class="grades total" value = 10>
                     </td>
                     <td class="percent"></td>
                 </tr>
                 <tr class="row">
                     <td>Activity 2</td>
                     <td>A2</td>
-                    <td><input type="number" class="grades weight"> </td>
-                    <td><input type="number" class="grades score"> /
-                        <input type="number" class="grades total">
+                    <td><input type="number" class="grades weight" value = 6> </td>
+                    <td><input type="number" class="grades score" value = 7> /
+                        <input type="number" class="grades total" value = 10>
                     </td>
                     <td class="percent"></td>
                 </tr>
