implement add activity button

--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -13,6 +13,7 @@
         <p>Give grades to the numeric activities:</p>
         <form class = "form">
             <table>
+                <tbody>
                 <tr>
                     <th>Name</th>
                     <th>Short Name</th>
@@ -38,10 +39,10 @@
                     </td>
                     <td class="percent"></td>
                 </tr>
-
+                </tbody>
             </table>
             <br>
-            <button class="button" name="ADD">ADD ACTIVITY</button>
+            <button id="add_activity">ADD ACTIVITY</button>
             <p class="head3">Result</p>
             <p id="result"></p>
             <br>
